# anchore_engine/services/catalog/swagger/swagger.yaml
@@ -1621,37 +1621,58 @@ paths:
         200:
           description: "success"
           schema:
-            $ref: "#/definitions/ImageImports"
+            $ref: "#/definitions/ImageImportOperation"
         500:
           description: "Internal Error"
-#  /imports/images/{operation_id}/content:
-#    get:
-#      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
-#      operationId: list_content_types
-#      x-anchore-authz-action: importImage
-#      summary: "Begin the import of an image analyzed by Syft into the system"
-#      description: "Starts the import process"
-#      produces:
-#        - "application/json"
-#      parameters:
-#        - name: operation_id
-#          in: path
-#          type: string
-#          required: true
-#      responses:
-#        200:
-#          description: "success"
-#          schema:
-#            $ref: "#/definitions/ImageImportContentTypesResponse"
-#        500:
-#          description: "Internal Error"
+    delete:
+      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
+      operationId: invalidate_operation
+      x-anchore-authz-action: importImage
+      summary: "Invalidate operation ID so it can be garbage collected"
+      produces:
+        - "application/json"
+      parameters:
+        - name: operation_id
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ImageImportOperation"
+        500:
+          description: "Internal Error"
+    put:
+      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
+      operationId: update_operation
+      x-anchore-authz-action: null
+      summary: "Internal operation to update import state"
+      produces:
+        - "application/json"
+      parameters:
+        - name: operation_id
+          in: path
+          type: string
+          required: true
+        - name: operation
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/ImageImportOperation"
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ImageImportOperation"
+        500:
+          description: "Internal Error"
   /imports/images/{operation_id}/packages:
     get:
       x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
       operationId: list_import_packages
       x-anchore-authz-action: importImage
       summary: "Begin the import of an image analyzed by Syft into the system"
-      description: "Starts the import process"
       produces:
         - "application/json"
       parameters:
@@ -1671,7 +1692,6 @@ paths:
       operationId: import_image_packages
       x-anchore-authz-action: importImage
       summary: "Begin the import of an image analyzed by Syft into the system"
-      description: "Starts the import process"
       produces:
         - "application/json"
       consumes:
@@ -1699,11 +1719,10 @@ paths:
       operationId: import_image_dockerfile
       x-anchore-authz-action: importImage
       summary: "Begin the import of an image analyzed by Syft into the system"
-      description: "Starts the import process"
       produces:
-        - "text/plain; utf-8"
-      consumes:
         - "application/json"
+      consumes:
+        - "text/plain; utf-8"
       parameters:
         - name: operation_id
           in: path
@@ -1716,32 +1735,54 @@ paths:
             $ref: "#/definitions/ImageImportContentResponse"
         500:
           description: "Internal Error"
-#  /imports/images/{operation_id}/finalize:
-#    post:
-#      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
-#      operationId: finalize_import
-#      x-anchore-authz-action: importImage
-#      summary: "Finalize the import, indicating all data is present and the system can load the image"
-#      description: "Ends the import process upload phase and begins the import async process to load the image"
-#      produces:
-#        - "application/json"
-#      parameters:
-#        - name: operation_id
-#          in: path
-#          type: string
-#          required: true
-#        - name: manifest
-#          in: body
-#          schema:
-#            $ref: "#/definitions/ImageImportManifest"
-#          required: true
-#      responses:
-#        200:
-#          description: "success"
-#          schema:
-#            $ref: "#/definitions/FinalizeImageImportResponse"
-#        500:
-#          description: "Internal Error"
+  /imports/images/{operation_id}/manifest:
+    post:
+      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
+      operationId: import_image_manifest
+      x-anchore-authz-action: importImage
+      summary: "Import a docker or OCI distribution manifest to associate with the image"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/vnd.oci.image.manifest.v1+json"
+        - "application/vnd.docker.distribution.manifest.v2+json"
+        - "application/vnd.docker.distribution.manifest.v1+json" # Older Docker spec
+        - "application/vnd.docker.distribution.manifest.v1+prettyjws" # Signed version
+      parameters:
+        - name: operation_id
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ImageImportContentResponse"
+        500:
+          description: "Internal Error"
+  /imports/images/{operation_id}/parent_manifest:
+    post:
+      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
+      operationId: import_image_parent_manifest
+      x-anchore-authz-action: importImage
+      summary: "Import a docker or OCI distribution manifest list to associate with the image"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/vnd.docker.distribution.manifest.list.v2+json"
+        - "application/vnd.oci.image.index.v1+json"
+      parameters:
+        - name: operation_id
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ImageImportContentResponse"
+        500:
+          description: "Internal Error"
 definitions:
   ImageAddMetadata:
     description: Additional data to add to an image record when an image is ingressed, such as dockerfile and annotations
@@ -1753,9 +1794,6 @@ definitions:
       annotations:
         type: object
         description: Key-Value metadata to add to the record
-      import_operation_id:
-        type: string
-        description: Import ID to use to pull content if doing an import instead of analysis
       import_manifest:
         $ref: "#/definitions/ImageImportManifest"
   ApiErrorResponse:
@@ -2062,7 +2100,7 @@ definitions:
     type: object
     properties:
       contents:
-        $ref: "#/definitions/ImportContentList"
+        $ref: "#/definitions/ImportContentDigests"
       tags:
         type: array
         items:
@@ -2111,15 +2149,24 @@ definitions:
         type: integer
       location:
         type: string
-  ImportContentList:
-    type: array
-    items:
-      type: string
-      description: Digest of content to use in the final import
-#  AnnotationArray:
-#    type: array
-#    items:
-#      $ref: "#/definitions/Annotation"
+  ImportContentDigests:
+    type: object
+    required:
+      - packages
+    description: Digest of content to use in the final import
+    properties:
+      packages:
+        type: string
+        description: Digest to use for the packages content
+      manifest:
+        type: string
+        description: Digest to reference content for the image manifest
+      parent_manifest:
+        type: string
+        description: Digest for reference content for parent manifest
+      dockerfile:
+        type: string
+        description: Digest for reference content for dockerfile
   Annotations:
     type: object
     description: Simple key/value pairs where the value may be optional
